@@ -2,7 +2,6 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -14,18 +13,18 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(
+        List<Task> tasks = List.of(
                 new Task("1", "First desc"),
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = new HashSet<>(List.of("1", "2"));
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 
     @Test
     public void extractNumberTwo() {
-        List<Task> tasks = Arrays.asList(
+        List<Task> tasks = List.of(
                 new Task("1", "First desc"),
                 new Task("2", "Second desc"),
                 new Task("3", "Third desc"),
@@ -35,7 +34,7 @@ public class FullSearchTest {
                 new Task("7", "Seventh desc"),
                 new Task("5", "Fifth desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2", "3", "5", "6", "7"));
+        Set<String> expected = new HashSet<>(List.of("1", "2", "3", "5", "6", "7"));
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 }
